Extract common logic to mock servers
Refactor the test code to extract the common logic to create mock for
servers, products and channels.